--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,8 +8,14 @@
         android:title="@string/settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_qr_code"
+        android:orderInCategory="100"
+        android:title="扫一扫"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/about"
         app:showAsAction="never" />
+
 </menu>
