--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -77,7 +77,7 @@
         android:background="@drawable/round_box_btn"
         android:textColor="@color/colorPrimary"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:text="@string/get_servants"/>
 
     <LinearLayout
@@ -102,8 +102,15 @@
             android:id="@+id/btn_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="50dp"
             android:text="更新数据" />
+
+        <Button
+            android:id="@+id/btn_input_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="导入账户" />
 
     </LinearLayout>
 
